--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nestjs/cli": "^11.0.10",
     "@types/bun": "latest",
     "@types/node": "^24.9.0",
+    "@types/pg": "^8.16.0",
     "@types/uuid": "^8.3.4"
   },
   "peerDependencies": {
@@ -29,8 +30,10 @@
     "@nestjs/cqrs": "^11.0.3",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-fastify": "^11.1.6",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.0.1",
     "graphql": "^16.11.0",
+    "pg": "^8.16.3",
     "prisma": "^7.0.1",
     "uuid": "^9.0.1",
     "uuid-validate": "latest"
